--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/resultado"
         android:layout_width="346dp"
         android:layout_height="90dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/background_light"
+        android:cursorVisible="false"
         android:ems="10"
         android:gravity="end"
         android:inputType="none|number"
@@ -28,8 +30,8 @@
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn7"
@@ -37,6 +39,7 @@
         android:layout_height="76dp"
         android:layout_marginTop="110dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn7"
         android:text="@string/_7"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -47,14 +50,15 @@
         android:id="@+id/btn8"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn8"
         android:text="@string/_8"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toEndOf="@+id/btn7"
-        app:layout_constraintTop_toTopOf="@+id/btn7" />
+        app:layout_constraintTop_toTopOf="@+id/btn7"
+        android:layout_marginLeft="15dp" />
 
     <Button
         android:id="@+id/btn9"
@@ -62,6 +66,7 @@
         android:layout_height="76dp"
         android:layout_marginStart="15dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn9"
         android:text="@string/_9"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -75,6 +80,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="6dp"
         android:background="#666666"
+        android:onClick="dividir"
         android:text="@string/_division"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
@@ -86,22 +92,21 @@
         android:id="@+id/btn4"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginStart="0dp"
         android:layout_marginTop="15dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn4"
         android:text="@string/_4"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/resultado"
-        app:layout_constraintTop_toBottomOf="@+id/btn7"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn7" />
 
     <Button
         android:id="@+id/btn5"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginTop="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn5"
         android:text="@string/_5"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -112,8 +117,8 @@
         android:id="@+id/btn6"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginTop="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn6"
         android:text="@string/_6"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -126,6 +131,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="6dp"
         android:background="#666666"
+        android:onClick="multiplica"
         android:text="@string/_mult"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
@@ -138,6 +144,7 @@
         android:layout_height="76dp"
         android:layout_marginTop="15dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn1"
         android:text="@string/_1"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -148,27 +155,25 @@
         android:id="@+id/btn2"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginStart="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn2"
         android:text="@string/_2"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/btn8"
-        app:layout_constraintTop_toTopOf="@+id/btn1"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn1" />
 
     <Button
         android:id="@+id/btn3"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn3"
         android:text="@string/_3"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/btn9"
-        app:layout_constraintTop_toTopOf="@+id/btn1"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn1" />
 
     <Button
         android:id="@+id/btnrestar"
@@ -176,6 +181,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="6dp"
         android:background="#666666"
+        android:onClick="resta"
         android:text="@string/_subst"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
@@ -188,6 +194,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="15dp"
         android:background="#AD0000"
+        android:onClick="ac"
         android:text="@string/_ac"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
@@ -198,52 +205,48 @@
         android:id="@+id/btn0"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btn0"
         android:text="@string/_0"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/btn8"
-        app:layout_constraintTop_toTopOf="@+id/btnac"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btnac" />
 
     <Button
         android:id="@+id/btnpunto"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="0dp"
         android:background="?attr/colorButtonNormal"
+        android:onClick="btnpunto"
         android:text="@string/_decimal"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@+id/btn9"
-        app:layout_constraintTop_toTopOf="@+id/btnac"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btnac" />
 
     <Button
         android:id="@+id/btnsumar"
         android:layout_width="76dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="0dp"
         android:background="#666666"
+        android:onClick="suma"
         android:text="@string/_sum"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn1"
-        app:layout_constraintEnd_toEndOf="@+id/resultado"
-        android:layout_marginRight="0dp" />
+        app:layout_constraintEnd_toEndOf="@+id/resultado" />
 
     <Button
         android:id="@+id/btnigual"
         android:layout_width="76dp"
         android:layout_height="76dp"
-        android:layout_marginEnd="0dp"
         android:background="#EC8000"
+        android:onClick="igual"
         android:text="@string/_equal"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="@+id/resultado"
-        app:layout_constraintTop_toTopOf="@+id/btnac"
-        android:layout_marginRight="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/btnac" />
 
 </android.support.constraint.ConstraintLayout>
